# mirrorshift

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
mirrorshift/: __init__.py  logging_and_metrics.py  models.py  train.py  utils.py
mirrorshift/config/model_configs/: medmla.json
mirrorshift/config/training_configs/: med.json
mirrorshift/modeling/: __init__.py  attention.py  causal_transformers.py  decoder_blocks.py  ffn.py
test/: basic_test.py
