[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirrorshift"
version = "0.1.0"
description = "my personal repo for transformers implementations and experiments"
requires-python = ">=3.11"
dependencies = [
    "torch==2.7.1",
    "tensorboard>=2.18.0",
    "tiktoken>=0.8.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = ["pytest>=8.3.4"]

[tool.setuptools]
packages = ["mirrorshift"]

[project.scripts]
mirrorshift-train = "mirrorshift.train:main"
